# algorithm_sorts_timing

11.12.2023/: CMakeLists.txt  data_generating.cpp  data_generating.h  main.cpp  sort_alg.cpp  sort_alg.h  sort_alg_files.cpp  sort_alg_files.h  timing_of_sorts.cpp  timing_of_sorts.h
11.12.2023/Pomiary/: 100_losowe.txt_pomiary.txt  100_optymistyczne.txt_pomiary.txt  100_peymistyczne.txt_pomiary.txt  10_losowe.txt_pomiary.txt  10_optymistyczne.txt_pomiary.txt  10_peymistyczne.txt_pomiary.txt  250_losowe.txt_pomiary.txt  250_optymistyczne.txt_pomiary.txt  250_peymistyczne.txt_pomiary.txt  25_losowe.txt_pomiary.txt  25_optymistyczne.txt_pomiary.txt  25_peymistyczne.txt_pomiary.txt  500_losowe.txt_pomiary.txt  500_optymistyczne.txt_pomiary.txt  500_peymistyczne.txt_pomiary.txt  50_losowe.txt_pomiary.txt  50_optymistyczne.txt_pomiary.txt  50_peymistyczne.txt_pomiary.txt  5_losowe.txt_pomiary.txt  5_optymistyczne.txt_pomiary.txt  5_peymistyczne.txt_pomiary.txt
11.12.2023/dane/: losowe.txt
